kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: go-http
  name: deployment-go-http
  # annotations:
  #   prometheus.io/scrape: "true"
  #   prometheus.io/path: /metrics
  #   prometheus.io/port: "8080"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: go-http
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-http
    spec:
      containers:
        - image: seanturner026/kube-playground-http-server
          imagePullPolicy: Always
          name: go-http
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
          securityContext:
            runAsUser: 10001
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 8080
