kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: go-http
  name: service-go-http
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: go-http
