kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: go-http
  name: ingress-go-http
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: service-go-http
              servicePort: 80
